minor fixes
Scope:
-Saku.css
-Saku.js

Because:
-Typo
-year color too dark for mobile devices

--- a/src/styles/Saku.css
+++ b/src/styles/Saku.css
@@ -85,4 +85,10 @@
     .SkillLevel{
         display: none !important;
     }
+
+    .dateAlign {
+        flex: 1; 
+        padding-bottom: 0.5vh;
+        color: white;
+    }
 }
